# reagent_emb_vis

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  setup.py
notebooks/: results.ipynb
scripts/: build_embeddings.py  prepare_reagents.py
src/: main.py
src/preprocessing/: fragment_grouping.py  identifyReactants.py  reagent_detector.py  reagent_replacement.py  utils.py
src/rendering/: figures.py  utils.py
