[project]
name = "reagent-emb-vis"
version = "1.0.0"
description = "Web application for exploring visual grouping of reagents by their roles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.18.2",
    "dash-dangerously-set-inner-html>=0.0.2",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "networkx>=3.4.2",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "rdkit>=2024.9.5",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.8",
]

[tool.ruff]
line-length = 100
